--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "app-route": "PolymerElements/app-route#^0.9.3",
     "iron-selector": "PolymerElements/iron-selector#^1.5.2",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
-    "paper-button": "PolymerElements/paper-button#^1.0.14"
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "iron-meta": "PolymerElements/iron-meta#^1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
