--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "connect": "^3.5.0",
+    "express": "^4.14.0",
     "serve-static": "^1.11.1"
   }
 }
